# cherryleaks

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md  \\  build.BAZEL  c-mem-block.c  c-mem-dma-func.c  c-mem.h  cppcheck_report.txt  list.c  list.h  ll_generic.c  testing.c
.github/workflows/: build.yml  clang-format-check.yml  cmake.yml  cppcheck.yml
c-mem/: CMakeLists.txt  c-mem-block.c  c-mem-dma-func.c  c-mem-entity-d-array.c  c-mem.c  c-mem.h  list.c
cherry_leaks/: CMakeLists.txt  c-mem.c  c-mem.h  cherry_leaks.c  cherry_leaks.h  list.h
inc/: c-mem-block.h  c-mem-defines.h  c-mem-dma-func.h  list.h
src/: c-mem-block.c  c-mem-dma-func.c  list.c
test/: CMakeLists.txt  c-mem-dma-test.cpp  cMemDmaTest.cpp
